--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -45,6 +45,38 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-check-circle"></use>
+                    </svg>
+                    <div class="name">check_selected</div>
+                    <div class="fontclass">#icon-check-circle</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-filter"></use>
+                    </svg>
+                    <div class="name">filter</div>
+                    <div class="fontclass">#icon-filter</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-check"></use>
+                    </svg>
+                    <div class="name">check</div>
+                    <div class="fontclass">#icon-check</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-back"></use>
+                    </svg>
+                    <div class="name">Back</div>
+                    <div class="fontclass">#icon-back</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-left"></use>
                     </svg>
                     <div class="name">arrow_right</div>
