--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -45,6 +45,30 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe6ab;</i>
+                    <div class="name">check_selected</div>
+                    <div class="code">&amp;#xe6ab;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe600;</i>
+                    <div class="name">filter</div>
+                    <div class="code">&amp;#xe600;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe84e;</i>
+                    <div class="name">check</div>
+                    <div class="code">&amp;#xe84e;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe62b;</i>
+                    <div class="name">Back</div>
+                    <div class="code">&amp;#xe62b;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe64f;</i>
                     <div class="name">arrow_right</div>
                     <div class="code">&amp;#xe64f;</div>
