feat: add scroll top button on list

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -49,6 +49,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-top"></i>
+                    <div class="name">top</div>
+                    <div class="fontclass">.icon-top</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-left"></i>
                     <div class="name">arrow_right</div>
                     <div class="fontclass">.icon-left</div>
