--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -77,6 +77,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-top"></use>
+                    </svg>
+                    <div class="name">top</div>
+                    <div class="fontclass">#icon-top</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-left"></use>
                     </svg>
                     <div class="name">arrow_right</div>
