--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -69,6 +69,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe620;</i>
+                    <div class="name">top</div>
+                    <div class="code">&amp;#xe620;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe64f;</i>
                     <div class="name">arrow_right</div>
                     <div class="code">&amp;#xe64f;</div>
