feat: add version and github information

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -31,6 +31,18 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-star"></i>
+                    <div class="name">star</div>
+                    <div class="fontclass">.icon-star</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-github"></i>
+                    <div class="name">github</div>
+                    <div class="fontclass">.icon-github</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-filter"></i>
                     <div class="name">filter</div>
                     <div class="fontclass">.icon-filter</div>
