--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -51,6 +51,18 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe6cc;</i>
+                    <div class="name">star</div>
+                    <div class="code">&amp;#xe6cc;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xeee2;</i>
+                    <div class="name">github</div>
+                    <div class="code">&amp;#xeee2;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe600;</i>
                     <div class="name">filter</div>
                     <div class="code">&amp;#xe600;</div>
