--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -53,6 +53,22 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-star"></use>
+                    </svg>
+                    <div class="name">star</div>
+                    <div class="fontclass">#icon-star</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
+                    <div class="name">github</div>
+                    <div class="fontclass">#icon-github</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-filter"></use>
                     </svg>
                     <div class="name">filter</div>
