feat: add close button to filter panel

--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -69,6 +69,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-close-selected"></use>
+                    </svg>
+                    <div class="name">close</div>
+                    <div class="fontclass">#icon-close-selected</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-filter"></use>
                     </svg>
                     <div class="name">filter</div>
