--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -63,6 +63,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe605;</i>
+                    <div class="name">close</div>
+                    <div class="code">&amp;#xe605;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe600;</i>
                     <div class="name">filter</div>
                     <div class="code">&amp;#xe600;</div>
