--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -43,6 +43,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-close-selected"></i>
+                    <div class="name">close</div>
+                    <div class="fontclass">.icon-close-selected</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-filter"></i>
                     <div class="name">filter</div>
                     <div class="fontclass">.icon-filter</div>
