feat: add custom sorter on poke detail page

--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -101,6 +101,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-sort-up"></use>
+                    </svg>
+                    <div class="name">sort up</div>
+                    <div class="fontclass">#icon-sort-up</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-top"></use>
                     </svg>
                     <div class="name">top</div>
@@ -113,6 +121,14 @@
                     </svg>
                     <div class="name">arrow_right</div>
                     <div class="fontclass">#icon-left</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-sort-down"></use>
+                    </svg>
+                    <div class="name">sort up</div>
+                    <div class="fontclass">#icon-sort-down</div>
                 </li>
             
         </ul>
