--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -87,6 +87,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe683;</i>
+                    <div class="name">sort up</div>
+                    <div class="code">&amp;#xe683;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe620;</i>
                     <div class="name">top</div>
                     <div class="code">&amp;#xe620;</div>
@@ -96,6 +102,12 @@
                 <i class="icon iconfont">&#xe64f;</i>
                     <div class="name">arrow_right</div>
                     <div class="code">&amp;#xe64f;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xeee3;</i>
+                    <div class="name">sort up</div>
+                    <div class="code">&amp;#xeee3;</div>
                 </li>
             
         </ul>
