--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -67,6 +67,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-sort-up"></i>
+                    <div class="name">sort up</div>
+                    <div class="fontclass">.icon-sort-up</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-top"></i>
                     <div class="name">top</div>
                     <div class="fontclass">.icon-top</div>
@@ -76,6 +82,12 @@
                 <i class="icon iconfont icon-left"></i>
                     <div class="name">arrow_right</div>
                     <div class="fontclass">.icon-left</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-sort-down"></i>
+                    <div class="name">sort up</div>
+                    <div class="fontclass">.icon-sort-down</div>
                 </li>
             
         </ul>
