feat: update icons, add icons to tables

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -13,9 +13,33 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont icon-minus-circle-o"></i>
+                    <div class="name">circle-minus</div>
+                    <div class="fontclass">.icon-minus-circle-o</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-plus-circle-o"></i>
+                    <div class="name">circle-plus</div>
+                    <div class="fontclass">.icon-plus-circle-o</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-minus"></i>
+                    <div class="name">minus</div>
+                    <div class="fontclass">.icon-minus</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-home"></i>
                     <div class="name">home</div>
                     <div class="fontclass">.icon-home</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-filter"></i>
+                    <div class="name">filter</div>
+                    <div class="fontclass">.icon-filter</div>
                 </li>
             
                 <li>
@@ -37,21 +61,33 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-plus-circle"></i>
+                    <div class="name">ic_plus - circle</div>
+                    <div class="fontclass">.icon-plus-circle</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-minus-circle"></i>
+                    <div class="name">ic_minus - circle</div>
+                    <div class="fontclass">.icon-minus-circle</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-github"></i>
                     <div class="name">github</div>
                     <div class="fontclass">.icon-github</div>
                 </li>
             
                 <li>
-                <i class="icon iconfont icon-close-selected"></i>
-                    <div class="name">close</div>
-                    <div class="fontclass">.icon-close-selected</div>
+                <i class="icon iconfont icon-plus"></i>
+                    <div class="name">plus</div>
+                    <div class="fontclass">.icon-plus</div>
                 </li>
             
                 <li>
-                <i class="icon iconfont icon-filter"></i>
-                    <div class="name">filter</div>
-                    <div class="fontclass">.icon-filter</div>
+                <i class="icon iconfont icon-close-selected"></i>
+                    <div class="name">close</div>
+                    <div class="fontclass">.icon-close-selected</div>
                 </li>
             
                 <li>
