--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -33,9 +33,33 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont">&#xe684;</i>
+                    <div class="name">circle-minus</div>
+                    <div class="code">&amp;#xe684;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe6dd;</i>
+                    <div class="name">circle-plus</div>
+                    <div class="code">&amp;#xe6dd;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xeb81;</i>
+                    <div class="name">minus</div>
+                    <div class="code">&amp;#xeb81;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe64e;</i>
                     <div class="name">home</div>
                     <div class="code">&amp;#xe64e;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe692;</i>
+                    <div class="name">filter</div>
+                    <div class="code">&amp;#xe692;</div>
                 </li>
             
                 <li>
@@ -57,21 +81,33 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe613;</i>
+                    <div class="name">ic_plus - circle</div>
+                    <div class="code">&amp;#xe613;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe61c;</i>
+                    <div class="name">ic_minus - circle</div>
+                    <div class="code">&amp;#xe61c;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xeee2;</i>
                     <div class="name">github</div>
                     <div class="code">&amp;#xeee2;</div>
                 </li>
             
                 <li>
-                <i class="icon iconfont">&#xe605;</i>
-                    <div class="name">close</div>
-                    <div class="code">&amp;#xe605;</div>
+                <i class="icon iconfont">&#xe6e3;</i>
+                    <div class="name">plus</div>
+                    <div class="code">&amp;#xe6e3;</div>
                 </li>
             
                 <li>
-                <i class="icon iconfont">&#xe600;</i>
-                    <div class="name">filter</div>
-                    <div class="code">&amp;#xe600;</div>
+                <i class="icon iconfont">&#xe605;</i>
+                    <div class="name">close</div>
+                    <div class="code">&amp;#xe605;</div>
                 </li>
             
                 <li>
