--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -29,10 +29,42 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-minus-circle-o"></use>
+                    </svg>
+                    <div class="name">circle-minus</div>
+                    <div class="fontclass">#icon-minus-circle-o</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-plus-circle-o"></use>
+                    </svg>
+                    <div class="name">circle-plus</div>
+                    <div class="fontclass">#icon-plus-circle-o</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-minus"></use>
+                    </svg>
+                    <div class="name">minus</div>
+                    <div class="fontclass">#icon-minus</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-home"></use>
                     </svg>
                     <div class="name">home</div>
                     <div class="fontclass">#icon-home</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-filter"></use>
+                    </svg>
+                    <div class="name">filter</div>
+                    <div class="fontclass">#icon-filter</div>
                 </li>
             
                 <li>
@@ -61,6 +93,22 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-plus-circle"></use>
+                    </svg>
+                    <div class="name">ic_plus - circle</div>
+                    <div class="fontclass">#icon-plus-circle</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-minus-circle"></use>
+                    </svg>
+                    <div class="name">ic_minus - circle</div>
+                    <div class="fontclass">#icon-minus-circle</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-github"></use>
                     </svg>
                     <div class="name">github</div>
@@ -69,18 +117,18 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-close-selected"></use>
+                        <use xlink:href="#icon-plus"></use>
                     </svg>
-                    <div class="name">close</div>
-                    <div class="fontclass">#icon-close-selected</div>
+                    <div class="name">plus</div>
+                    <div class="fontclass">#icon-plus</div>
                 </li>
             
                 <li>
                     <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-filter"></use>
+                        <use xlink:href="#icon-close-selected"></use>
                     </svg>
-                    <div class="name">filter</div>
-                    <div class="fontclass">#icon-filter</div>
+                    <div class="name">close</div>
+                    <div class="fontclass">#icon-close-selected</div>
                 </li>
             
                 <li>
