feat: add custom level editor for stats table

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -115,6 +115,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-edit"></i>
+                    <div class="name">edit-fill</div>
+                    <div class="fontclass">.icon-edit</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-left"></i>
                     <div class="name">arrow_right</div>
                     <div class="fontclass">.icon-left</div>
