--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -135,6 +135,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe86d;</i>
+                    <div class="name">edit-fill</div>
+                    <div class="code">&amp;#xe86d;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe64f;</i>
                     <div class="name">arrow_right</div>
                     <div class="code">&amp;#xe64f;</div>
