feat: add icon for attack mode

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -73,6 +73,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-melee"></i>
+                    <div class="name">melee</div>
+                    <div class="fontclass">.icon-melee</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-github"></i>
                     <div class="name">github</div>
                     <div class="fontclass">.icon-github</div>
@@ -91,6 +97,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-bow"></i>
+                    <div class="name">romance bow</div>
+                    <div class="fontclass">.icon-bow</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-check"></i>
                     <div class="name">check</div>
                     <div class="fontclass">.icon-check</div>
@@ -100,6 +112,12 @@
                 <i class="icon iconfont icon-back"></i>
                     <div class="name">Back</div>
                     <div class="fontclass">.icon-back</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-question"></i>
+                    <div class="name">question</div>
+                    <div class="fontclass">.icon-question</div>
                 </li>
             
                 <li>
