--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -109,6 +109,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-melee"></use>
+                    </svg>
+                    <div class="name">melee</div>
+                    <div class="fontclass">#icon-melee</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-github"></use>
                     </svg>
                     <div class="name">github</div>
@@ -133,6 +141,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-bow"></use>
+                    </svg>
+                    <div class="name">romance bow</div>
+                    <div class="fontclass">#icon-bow</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-check"></use>
                     </svg>
                     <div class="name">check</div>
@@ -145,6 +161,14 @@
                     </svg>
                     <div class="name">Back</div>
                     <div class="fontclass">#icon-back</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-question"></use>
+                    </svg>
+                    <div class="name">question</div>
+                    <div class="fontclass">#icon-question</div>
                 </li>
             
                 <li>
