--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -93,6 +93,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe65a;</i>
+                    <div class="name">melee</div>
+                    <div class="code">&amp;#xe65a;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xeee2;</i>
                     <div class="name">github</div>
                     <div class="code">&amp;#xeee2;</div>
@@ -111,6 +117,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe67a;</i>
+                    <div class="name">romance bow</div>
+                    <div class="code">&amp;#xe67a;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe84e;</i>
                     <div class="name">check</div>
                     <div class="code">&amp;#xe84e;</div>
@@ -120,6 +132,12 @@
                 <i class="icon iconfont">&#xe62b;</i>
                     <div class="name">Back</div>
                     <div class="code">&amp;#xe62b;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe674;</i>
+                    <div class="name">question</div>
+                    <div class="code">&amp;#xe674;</div>
                 </li>
             
                 <li>
