feat: add color of type dark

--- a/src/stylesheet/themes/offical.css
+++ b/src/stylesheet/themes/offical.css
@@ -15,3 +15,4 @@ $type-steel: hsl(0,0%,63%);
 $type-ice: hsl(192,75%,64%);
 $type-ghost: hsl(243,30%,63%);
 $type-dragon: hsl(224,43%,65%);
+$type-dark: hsl(27,26%,36%);
