feat: add language switch button

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -13,6 +13,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont icon-wen"></i>
+                    <div class="name">文</div>
+                    <div class="fontclass">.icon-wen</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-minus-circle-o"></i>
                     <div class="name">circle-minus</div>
                     <div class="fontclass">.icon-minus-circle-o</div>
