--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -29,6 +29,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-wen"></use>
+                    </svg>
+                    <div class="name">文</div>
+                    <div class="fontclass">#icon-wen</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-minus-circle-o"></use>
                     </svg>
                     <div class="name">circle-minus</div>
