--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -33,6 +33,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont">&#xe600;</i>
+                    <div class="name">文</div>
+                    <div class="code">&amp;#xe600;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe684;</i>
                     <div class="name">circle-minus</div>
                     <div class="code">&amp;#xe684;</div>
