feat: update icon of language

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -31,6 +31,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-language"></i>
+                    <div class="name">language</div>
+                    <div class="fontclass">.icon-language</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-minus"></i>
                     <div class="name">minus</div>
                     <div class="fontclass">.icon-minus</div>
