--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -53,6 +53,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-language"></use>
+                    </svg>
+                    <div class="name">language</div>
+                    <div class="fontclass">#icon-language</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-minus"></use>
                     </svg>
                     <div class="name">minus</div>
