--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -51,6 +51,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe785;</i>
+                    <div class="name">language</div>
+                    <div class="code">&amp;#xe785;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xeb81;</i>
                     <div class="name">minus</div>
                     <div class="code">&amp;#xeb81;</div>
