feat: add home menu, re-design dish list page

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -151,9 +151,21 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-pokemon"></i>
+                    <div class="name">pokemon</div>
+                    <div class="fontclass">.icon-pokemon</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-left"></i>
                     <div class="name">arrow_right</div>
                     <div class="fontclass">.icon-left</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-dish"></i>
+                    <div class="name">dish</div>
+                    <div class="fontclass">.icon-dish</div>
                 </li>
             
                 <li>
