--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -213,10 +213,26 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-pokemon"></use>
+                    </svg>
+                    <div class="name">pokemon</div>
+                    <div class="fontclass">#icon-pokemon</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-left"></use>
                     </svg>
                     <div class="name">arrow_right</div>
                     <div class="fontclass">#icon-left</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-dish"></use>
+                    </svg>
+                    <div class="name">dish</div>
+                    <div class="fontclass">#icon-dish</div>
                 </li>
             
                 <li>
