--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -171,9 +171,21 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe6df;</i>
+                    <div class="name">pokemon</div>
+                    <div class="code">&amp;#xe6df;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe64f;</i>
                     <div class="name">arrow_right</div>
                     <div class="code">&amp;#xe64f;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe786;</i>
+                    <div class="name">dish</div>
+                    <div class="code">&amp;#xe786;</div>
                 </li>
             
                 <li>
