feat: add moves list page

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -109,6 +109,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-skill"></i>
+                    <div class="name">战斗技能</div>
+                    <div class="fontclass">.icon-skill</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-bow"></i>
                     <div class="name">romance bow</div>
                     <div class="fontclass">.icon-bow</div>
@@ -154,6 +160,12 @@
                 <i class="icon iconfont icon-pokemon"></i>
                     <div class="name">pokemon</div>
                     <div class="fontclass">.icon-pokemon</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-learn"></i>
+                    <div class="name">技能爱好</div>
+                    <div class="fontclass">.icon-learn</div>
                 </li>
             
                 <li>
