--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -129,6 +129,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe633;</i>
+                    <div class="name">战斗技能</div>
+                    <div class="code">&amp;#xe633;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe67a;</i>
                     <div class="name">romance bow</div>
                     <div class="code">&amp;#xe67a;</div>
@@ -174,6 +180,12 @@
                 <i class="icon iconfont">&#xe6df;</i>
                     <div class="name">pokemon</div>
                     <div class="code">&amp;#xe6df;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe621;</i>
+                    <div class="name">技能爱好</div>
+                    <div class="code">&amp;#xe621;</div>
                 </li>
             
                 <li>
