--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -157,6 +157,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-skill"></use>
+                    </svg>
+                    <div class="name">战斗技能</div>
+                    <div class="fontclass">#icon-skill</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-bow"></use>
                     </svg>
                     <div class="name">romance bow</div>
@@ -217,6 +225,14 @@
                     </svg>
                     <div class="name">pokemon</div>
                     <div class="fontclass">#icon-pokemon</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-learn"></use>
+                    </svg>
+                    <div class="name">技能爱好</div>
+                    <div class="fontclass">#icon-learn</div>
                 </li>
             
                 <li>
