feat: add star button on homepage

--- a/src/components/iconfont/demo_fontclass.html
+++ b/src/components/iconfont/demo_fontclass.html
@@ -127,6 +127,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-good"></i>
+                    <div class="name">good</div>
+                    <div class="fontclass">.icon-good</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-back"></i>
                     <div class="name">Back</div>
                     <div class="fontclass">.icon-back</div>
@@ -136,6 +142,12 @@
                 <i class="icon iconfont icon-question"></i>
                     <div class="name">question</div>
                     <div class="fontclass">.icon-question</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont icon-heart"></i>
+                    <div class="name">heart</div>
+                    <div class="fontclass">.icon-heart</div>
                 </li>
             
                 <li>
