--- a/src/components/iconfont/demo_symbol.html
+++ b/src/components/iconfont/demo_symbol.html
@@ -181,6 +181,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-good"></use>
+                    </svg>
+                    <div class="name">good</div>
+                    <div class="fontclass">#icon-good</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-back"></use>
                     </svg>
                     <div class="name">Back</div>
@@ -193,6 +201,14 @@
                     </svg>
                     <div class="name">question</div>
                     <div class="fontclass">#icon-question</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-heart"></use>
+                    </svg>
+                    <div class="name">heart</div>
+                    <div class="fontclass">#icon-heart</div>
                 </li>
             
                 <li>
