--- a/src/components/iconfont/demo_unicode.html
+++ b/src/components/iconfont/demo_unicode.html
@@ -147,6 +147,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe637;</i>
+                    <div class="name">good</div>
+                    <div class="code">&amp;#xe637;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe62b;</i>
                     <div class="name">Back</div>
                     <div class="code">&amp;#xe62b;</div>
@@ -156,6 +162,12 @@
                 <i class="icon iconfont">&#xe674;</i>
                     <div class="name">question</div>
                     <div class="code">&amp;#xe674;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe65f;</i>
+                    <div class="name">heart</div>
+                    <div class="code">&amp;#xe65f;</div>
                 </li>
             
                 <li>
